# Dep-Age

./: .dep-age-history.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
.qwen/: PROJECT_SUMMARY.md  settings.json
homebrew/dep-age/: README.md  dep-age.rb
npm/: README.md  install.js  package.json  run.js
src/: config.rs  diff.rs  lib.rs  main.rs
src/output/: github_checks.rs  junit.rs  mod.rs  sarif.rs
tests/: cache_tests.rs  cli_tests.rs  go_docker_tests.rs  mocked_http_tests.rs  output_tests.rs  python_tests.rs  unit_tests.rs
