[package]
name = "dep-age"
version = "0.1.3"
edition = "2021"
authors = ["Ayyan <ayyan@example.com>"]
description = "Check how old your dependencies are — for Cargo.toml, package.json, pyproject.toml, requirements.txt, go.mod, and docker-compose.yml"
license = "MIT"
repository = "https://github.com/Ayyankhan101/Dep-Age"
keywords = ["dependencies", "audit", "stale", "cargo", "npm"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "dep-age"
path = "src/main.rs"

[lib]
name = "dep_age"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# TOML parsing (for Cargo.toml)
toml = "0.8"
# CLI argument parsing
clap = { version = "4", features = ["derive"] }
# Date/time for calculating age
chrono = { version = "0.4", features = ["serde"] }
# Colored terminal output
colored = "3"
# Async concurrency helpers
futures = "0.3"
# Error boilerplate
thiserror = "2"
# Progress bar
indicatif = "0.18"
# Caching support
dirs = "5"
sha2 = "0.10"
# XML generation for JUnit/SARIF
quick-xml = "0.37"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
serde_json = { version = "1", features = ["preserve_order"] }
wiremock = "0.6"
